--- a/methods.tex
+++ b/methods.tex
@@ -76,12 +76,6 @@ There are several main advantages of PML: Firstly, the proposed method is highly
     \label{MaskRNN}
 \end{figure*}
 
-\begin{figure*}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{./figure/DyeNet.png}
-    \caption{(a) The pipeline of \textbf{DyeNet}. The network hinges on two main modules, namely a re-identification (Re-ID) module and a recurrent mask propagation (Re-MP) module. (b) The network architecture of the re-identification (Re-ID) module.}
-    \label{DyeNet}
-\end{figure*}
 
 \textbf{LucidTracker}\cite{LucidTracker} propose a new training strategy which is suitable for both single and multiple object tracking. Instead of using large training sets hoping to generalize across domains, it generate in-domain training data using the provided annotation on the first frame of each video to synthesize (``lucid dream'', which has been shown in Sec 2.4.2). This approach allows to reach competitive results even when training from only a single annotated frame, without ImageNet pre-training. LucidTracker indicate that using a larger training set is not automatically better, and that for the tracking task a smaller training set that is closer to the target domain is more effective. This changes the mindset regarding how many training samples and general ``objectness'' knowledge are required for the object tracking task.
 
@@ -94,20 +88,37 @@ There are several main advantages of PML: Firstly, the proposed method is highly
 
 \textbf{CTN}\cite{CTN} propagate the segmentation labels at the previous frame to the current frame using optical ﬂow vectors, has three decoding branches: separative, definite foreground, and definite background decoders. Then,CTN perform Markov random field optimization based on outputs of the three decoders. CTN sequentially carry out these processes from the second to the last frames to extract a segment track of the target object. 
 
+\begin{figure*}[ht]
+    \centering
+    \includegraphics[width=\textwidth]{./figure/DyeNet.png}
+    \caption{(a) The pipeline of \textbf{DyeNet}. The network hinges on two main modules, namely a re-identification (Re-ID) module and a recurrent mask propagation (Re-MP) module. (b) The network architecture of the re-identification (Re-ID) module.}
+    \label{DyeNet}
+\end{figure*}
 
+\begin{figure*}[ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{./figure/OSMN.png}
+    \caption{Pipline of \textbf{OSMN}}
+    \label{OSMN}
+\end{figure*}
 
 \textbf{MaskRNN}\cite{MaskRNN} focus on instance level video object segmentation, which is an important technique for video editing and compression.MaskRNN is a recurrent neural net approach which fuses in each frame the output of two deep nets for each object instance — a binary segmentation net providing a mask and a localization net providing a bounding box. Due to the recurrent component and the localization component,MaskRNN is able to take advantage of long-term temporal structures of the video data as well as rejecting outliers.
 
-
-
-MaskRNN use a bottom-up approach where we ﬁrst track and segment individual objects before merging the results. To capture the temporal structure, this approach employs a recurrent neural net while the segmentation of individual objects is based on predictions of binary segmentation masks conﬁned to a predicted bounding box.In Fig.\ref{MaskRNN}, we show an example video with 2 objects (left). MaskRNN predicts the binary segmentation for each object using 2 deep nets, one for each object, which perform binary segmentation and object localization. The output instance-level segmentation mask is obtained by combining the binary segmentation masks.
+MaskRNN use a bottom-up approach where we first track and segment individual objects before merging the results. To capture the temporal structure, this approach employs a recurrent neural net while the segmentation of individual objects is based on predictions of binary segmentation masks confined to a predicted bounding box.In Fig.\ref{MaskRNN}, we show an example video with 2 objects (left). MaskRNN predicts the binary segmentation for each object using 2 deep nets, one for each object, which perform binary segmentation and object localization. The output instance-level segmentation mask is obtained by combining the binary segmentation masks.
 
 
 
 \subsubsection{Combine}
 Template Matching paradigm fails in some challenging cases in DAVIS, as using a fixed set of templates cannot sufficiently cover large scale and pose variations; In addition, Temporal Propagation fails in some occlusion situation.  To solving video object segmentation with multiple instances requires template matching for coping with occlusion and temporal propagation for ensuring temporal continuity. \cite{OSMN}\cite{DyeNet} bring some approaches into this problem.
 
-\textbf{OSMN}\cite{OSMN}
+
+
+\textbf{OSMN}\cite{OSMN} proposes that Recent deep learning based approaches find it effective by fine-tuning a general-purpose segmentation model on the annotated frame using hundreds of iterations of gradient descent. Despite the high accuracy these methods achieve, the fine-tuning process is inefficient and fail to meet the requirements of real world applications. So they propose an approach that uses a single forward pass to adapt the segmentation model to the appearance of a specific object. Specifically, a second meta neural network named modulator is learned to manipulate the intermediate layers of the segmentation network given limited visual and spatial information of the target object. OSMN is 70× faster than fine-tuning approaches while achieving similar accuracy.
+
+In order to alleviate the computational cost of semisupervised segmentation, OSMN propose an approach to adapt the generic segmentation network to the appearance of a specific object instance in one single feed-forward pass. It proposes to employ another meta neural network called modulator to learn to adjust the intermediate layers of the generic segmentation network given an arbitrary target object instance. By extracting information from the image of the annotated object and the spatial prior of the object, the modulator produces a list of parameters, which are injected into the segmentation model for layer-wise feature manipulation. Without one-shot fine-tuning, this model is able to change the behavior of the segmentation network with minimum extracted information from the target object.
+
+Fig.\ref{OSMN} shows the three componentsof OSMN: a segmentation network, a visual modulator, and a spatial modulator. The two modulators produce a set of parameters that manipulates the intermediate feature maps of the segmentation network and adapt it to segment the specific object.
+
 
 \textbf{DyeNet}\cite{DyeNet} formulate a deep recurrent network that is capable of segmenting and tracking objects in video simultaneously by their temporal continuity, yet able to re-identify them when they re-appear after a prolonged occlusion. DyeNet combine both temporal propagation and re-identification functionalities into a single framework that can be trained end-to-end. In particular,it present a re-identification module with template expansion to retrieve missing objects despite their large appearance changes. In addition, it contribute a new attention-based recurrent mask propagation approach that is robust to distractors not belonging to the target segment.
 
